<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">INeed!</string>
    <string name="label_regactivity">Register</string>
    <string name="activity_message_label">Messages</string>
    <string name="activity_request_label">Request</string>
    <string name="activity_provide_label">Provide</string>
    <string name="activity_provide_seller_signup">Sign up for Seller Alerts</string>
    <string name="activity_provide_browse_local_requests">Browse Local Requests</string>
    <string name="activity_reg_label">Register</string>
    <string name="button_reg_str">Register</string>
    <string name="button_reg_err_passwd_less_str">Password no less then 6 characters</string>
    <string name="edittext_reg_name">Your Name</string>
    <string name="edittext_reg_passwd">Password. 6 to 16 chars</string>
    <string name="edittext_reg_passwd2">Password once again</string>
    <string name="activity_profile_label">Profile</string>
    <string name="loading_login_err">Login error. Please Login again.</string>
    <string name="edittext_login_name">Your E-mail</string>
    <string name="edittext_login_passwd">Password</string>
    <string name="edittext_reg_email">Your E-Mail</string>

</resources>