<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/activity_reg_label"
        android:textSize="20dp"
        android:background="#123456"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal">
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
         	android:id="@+id/edittext_regactivity_username"
         	android:layout_marginLeft="20dp"
         	android:layout_marginRight="20dp"
         	android:hint="@string/edittext_reg_name"/>
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_regactivity_passwd"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:password="true"
            android:hint="@string/edittext_reg_passwd"/>
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_regactivity_passwd2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:password="true"
            android:hint="@string/edittext_reg_passwd2"/>
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_regactivity_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:password="true"
            android:hint="@string/edittext_reg_email"/>
        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_reg_str"
            android:id="@+id/button_regactivity_reg"/>
    </LinearLayout>

</LinearLayout>